--- a/templates/supply/add.html
+++ b/templates/supply/add.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,20 +8,21 @@
   <link rel="stylesheet" href="/static/supply.css">
   <title>추가하기</title>
 </head>
+
 <body>
   <div id="app">
     <header>main</header>
     <nav>
       <ul>
         <li><a href="/">HOME</a></li>
-        <li><a href="/contact/list">연락처</a></li>
-        <li><a href="/finace/list">가계부</a></li>
-        <li><a href="/supply/list">비품</a></li>    <!-- 각 이름마다 링크 걸기 -->
+        <li><a href="/contacts/list">연락처</a></li>
+        <li><a href="/finance/list">가계부</a></li>
+        <li><a href="/supply/list">비품</a></li> <!-- 각 이름마다 링크 걸기 -->
         <li><a href="/todo/list">할일</a></li>
       </ul>
     </nav>
     <main>
-      <aside>부가정보</aside>        <!-- 부가정보는 main 안에 있어야함 -->
+      <aside>부가정보</aside> <!-- 부가정보는 main 안에 있어야함 -->
       <section>
         <form action="/supply/add" method="post">
           <div class="mt-3 mb-3">
@@ -39,11 +41,12 @@
             <button class="btn btn-success">추가하기</button>
           </div>
         </form>
-      
+
       </section>
       <aside>부가정보</aside>
     </main>
     <footer>copyright &copy; 2025 </footer>
   </div>
 </body>
+
 </html>
