--- a/templates/supply/list.html
+++ b/templates/supply/list.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,14 +8,15 @@
   <link rel="stylesheet" href="/static/supply.css">
   <title>SUPPLY</title>
 </head>
+
 <body>
   <div id="app">
     <header>main</header>
     <nav>
       <ul>
         <li><a href="/">HOME</a></li>
-        <li><a href="/contact/list">연락처</a></li>
-        <li><a href="/finace/list">가계부</a></li>
+        <li><a href="/contacts/list">연락처</a></li>
+        <li><a href="/finance/list">가계부</a></li>
         <li><a href="/supply/list">비품</a></li>
         <li><a href="/todo/list">할일</a></li>
       </ul>
@@ -36,8 +38,8 @@
             <tr>
               <td>{{s.sno}}</td>
               <td>
-                <a href="/supply/read?sno={{s.sno}}">{{s.name}}</a>          <!-- 추가하기로 이동하는 링크 넣기 -->
-              </td> 
+                <a href="/supply/read?sno={{s.sno}}">{{s.name}}</a> <!-- 추가하기로 이동하는 링크 넣기 -->
+              </td>
               <td>{{s.count}}</td>
               <td>{{s.date}}</td>
             </tr>
@@ -45,12 +47,13 @@
           </tbody>
         </table>
         <a href="/supply/add">
-        <button type="button" class="btn btn-secondary">비품 추가하기</button>
-        </a>  <!-- 비품추가 페이지 /supply/add로 이동하는 링크 걸기-->
+          <button type="button" class="btn btn-secondary">비품 추가하기</button>
+        </a> <!-- 비품추가 페이지 /supply/add로 이동하는 링크 걸기-->
       </section>
       <aside>부가정보</aside>
     </main>
     <footer>copyright &copy; 2025 </footer>
   </div>
 </body>
+
 </html>
