--- a/templates/supply/read.html
+++ b/templates/supply/read.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,14 +8,15 @@
   <link rel="stylesheet" href="/static/supply.css">
   <title>LIST</title>
 </head>
+
 <body>
   <div id="app">
     <header>main</header>
     <nav>
       <ul>
         <li><a href="/">HOME</a></li>
-        <li><a href="/contact/list">연락처</a></li>
-        <li><a href="/finace/list">가계부</a></li>
+        <li><a href="/contacts/list">연락처</a></li>
+        <li><a href="/finance/list">가계부</a></li>
         <li><a href="/supply/list">비품</a></li>
         <li><a href="/todo/list">할일</a></li>
       </ul>
@@ -64,6 +66,8 @@
     <footer>copyright &copy; 2025 </footer>
   </div>
 </body>
+
 </html>
 </body>
+
 </html>
