--- a/templates/todo/write.html
+++ b/templates/todo/write.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/static/main.css">
+    <link rel="stylesheet" href="/static/todo.css">
     <title>Document</title>
 </head>
 
@@ -16,7 +16,7 @@
         </header>
         <nav>
             <ul>
-                <li><a href="/">HOME</a></li>
+                <li><a href="">HOME</a></li>
                 <li><a href="/contacts/list">연락처</a></li>
                 <li><a href="/finance/list">가계부</a></li>
                 <li><a href="/supply/list">비품</a></li>
@@ -28,7 +28,19 @@
         <main>
             <aside>부가정보</aside>
             <section>
-                <h1>nothing...</h1>
+                <form action="/todo/write" method="post">
+                    <div class="mb-3 mt-3">
+                        <label for="f_date" class="form-label">마감일:</label>
+                        <input type="date" class="form-control" id="f_date" name="f_date" required>
+                    </div>
+                    <div class="mb-3 mt-3">
+                        <label for="f_date" class="form-label">할일:</label>
+                        <input type="text" class="form-control" id="title" name="title" placeholder="할일 입력..." required>
+                    </div>
+                    <label for="comment">설명:</label>
+                    <textarea class="form-control" rows="5" id="content" name="content" required></textarea>
+                    <button class="btn btn-success">작성</button>
+                </form>
             </section>
             <aside>부가정보</aside>
         </main>
